src/test/deca/syntax/valid/created/testsGeneraux/moitie.deca
// Description :
//    Affichage en flottant de la moitié du carré d'un entier
//
// Résultats :
//    ok

{
    int x;
    x = readInt();
    println(0.5 * (x * x));
}

